// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat Snapshot test for chat message from assistant 1`] = `
<div
  className="bg-gray-100"
  style={
    Object {
      "overflowWrap": "anywhere",
    }
  }
>
  <div
    className=" m-auto flex md:gap-6 md:py-6 xl:max-w-2xl"
  >
    <div
      className="text-right font-bold "
    >
      <Icon
        name="contact"
      />
    </div>
    <div
      className="prose mt-[-2px] w-full"
    >
      <div
        className="flex "
      >
        <div
          className="flex-1"
        >
          hello
        </div>
        <div
          className="copy-button-div md:-mr-8"
        >
          <div
            className="copy-button-div-nested"
          >
            <Button
              data-testid="copy-msg-button"
              iconName="copy"
              onClick={[Function]}
              variant="icon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Chat Snapshot test for chat message from user 1`] = `
<div
  className=""
  style={
    Object {
      "overflowWrap": "anywhere",
    }
  }
>
  <div
    className=" m-auto flex md:gap-6 md:py-6 xl:max-w-2xl"
  >
    <div
      className="prose mt-[-2px] w-full"
    >
      <div
        className="w-full"
      >
        <div>
          hello
        </div>
      </div>
    </div>
    <div
      className="min-w-[40px] text-right"
    >
      <Icon
        name="user-profile"
      />
    </div>
  </div>
</div>
`;
